Fixed issues with focus visable and, link wrappign

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ h3 {
 
 body,
 main {
+  
   display: flex;
   flex-direction: column;
   gap: var(--default-outline-gap);
@@ -77,7 +78,6 @@ nav menu li a {
 a {
   color: var(--color-primary);
   text-decoration: none;
-  display: inline-block;
 
   &:hover {
     text-decoration: underline;
@@ -86,12 +86,12 @@ a {
   &[href^="http"]::after,
   [href^="https://"]::after {
     content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='rgb(212, 34, 34)' class='bi bi-arrow-up-right' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z'/%3E%3C/svg%3E");
-    white-space: nowrap;
+    text-wrap: nowrap;
   }
 
   &:focus-visible {
     outline: 3px dotted var(--color-dark);
-    padding: 0.2em;
+    outline-offset: 0.25rem;
   }
 }
 
@@ -121,7 +121,7 @@ figure.img-container {
     width: 100%;
     min-height: 200px;
     aspect-ratio: 16/9;
-    object-position: center;
+      object-fit: cover;
   }
 }
 
